# embedded-control-projects

./: README.md
aerosim/: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
aerosim/docs/: SRS.md
aerosim/docs/fase1/: README.md
aerosim/docs/fase2/: README.md
aerosim/docs/fase3/: README.md
aerosim/docs/fase4/: README.md
aerosim/docs/fase5/: README.md
aerosim/docs/fase6/: README.md
aerosim/firmware/: CMakeLists.txt  main.c  platform.h  scheduler.c  scheduler.h  sensors.c  sensors.h  telemetry.c  telemetry.h
aerosim/ground_station/: main.py  parser.py
aerosim/hardware/sensor_board/: BOM.csv  schematic_description.md
aerosim/model/: pid_analysis.py  pid_controller.m  pid_gains.h
aerosim/physics/: CMakeLists.txt  Drone.cpp  Drone.h  Environment.cpp  Environment.h  Vec3.h  drone_c_api.cpp  drone_c_api.h
aerosim/tests/: CMakeLists.txt
aerosim/tests/test_firmware/: CMakeLists.txt  test_framework.h  test_runner.c  test_scheduler.c  test_sensors.c  test_telemetry.c
aerosim/tests/test_ground/: test_parser.py
simplethermometer/: .gitignore  CMakeLists.txt  COMPILATION.md  README.md
simplethermometer/docs/: SRS.md  fase1_requirements.md  fase2_firmware_c.md  fase3_ground_station.md  fase4_testing.md  fase5_model_based_design.md
simplethermometer/firmware/: main.c  sensor.c  sensor.h  serial.c  serial.h
simplethermometer/ground_station/: main.py  requirements.txt  serial_reader.py
simplethermometer/tests/: test_framework.h  test_sensor.c  test_serial_parser.c
thermocontrol/: .gitignore  CMakeLists.txt  README.md
thermocontrol/docs/: SRS.md
thermocontrol/docs/fase1/: README.md
thermocontrol/docs/fase2/: README.md
thermocontrol/docs/fase3/: README.md
thermocontrol/docs/fase4/: README.md
thermocontrol/docs/fase5/: README.md
thermocontrol/firmware/: CMakeLists.txt  main.c  pid_controller.c  pid_controller.h  platform.c  platform.h  scheduler.c  scheduler.h  sensors.c  sensors.h  telemetry.c  telemetry.h
thermocontrol/ground_station/: main.py  parser.py  requirements.txt
thermocontrol/model/: pid_analysis.py  pid_controller.m  pid_gains.h
thermocontrol/physics/: CMakeLists.txt  ThermoModel.cpp  ThermoModel.h  Vec3.h  thermocontrol_c_api.cpp  thermocontrol_c_api.h
thermocontrol/tests/: CMakeLists.txt
thermocontrol/tests/test_firmware/: CMakeLists.txt  test_framework.h
thermocontrol/tests/test_ground/: CMakeLists.txt
